upd: Спринт 8